--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Jangan Terlalu Banyak Menccoba!</title>
+    <title>SMAN 1 Kwanyar</title>
   </head>
   <body>
-    <h1>Jangan Banyak Memncoba</h1>
+    <h1>SMAN 1 Kwanyar</h1>
+    <p>  Adalah sebuah sekolah yang terletak di <a href="https://www.google.com/maps/place/SMAN+1+Kwanyar/@-7.1535047,112.8603651,17z/data=!3m1!4b1!4m6!3m5!1s0x2dd81da69476ac9d:0x88cd2fdb3b89f3aa!8m2!3d-7.15351!4d112.86294!16s%2Fg%2F1hm1q5cwt?entry=ttu&g_ep=EgoyMDI1MTEwNC4xIKXMDSoASAFQAw%3D%3D">Jl. Dlemer No.31, Somber, Pesanggrahan, Kec. Kwanyar, Kabupaten Bangkalan, Jawa Timur</a></p>
   </body>
 </html>
